--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,25 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+yolov8n.pt
+runs/detect/custom/args.yaml
+runs/detect/custom/confusion_matrix.png
+runs/detect/custom/F1_curve.png
+runs/detect/custom/labels_correlogram.jpg
+runs/detect/custom/labels.jpg
+runs/detect/custom/P_curve.png
+runs/detect/custom/PR_curve.png
+runs/detect/custom/R_curve.png
+runs/detect/custom/results.csv
+runs/detect/custom/results.png
+runs/detect/custom/train_batch0.jpg
+runs/detect/custom/train_batch1.jpg
+runs/detect/custom/train_batch2.jpg
+runs/detect/custom/val_batch0_labels.jpg
+runs/detect/custom/val_batch0_pred.jpg
+runs/detect/custom/weights/best.onnx
+runs/detect/custom/weights/best.pt
+runs/detect/custom/weights/last.pt
+runs/detect/custom/weights/best_openvino_model/yolo/best/best.bin
+runs/detect/custom/weights/best_openvino_model/yolo/best/best.xml
+runs/detect/custom/weights/best_openvino_model/yolo/best/metadata.yaml
